<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/florien_widget_background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/focus_15_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widget_focus_brand"
        android:textColor="#29262D"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/focus_15_ready"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/widget_focus_ready"
        android:textColor="#29262D"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/focus_15_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/florien_widget_primary"
        android:paddingHorizontal="13dp"
        android:paddingVertical="8dp"
        android:text="@string/widget_start"
        android:textColor="#29262D"
        android:textSize="12sp"
        android:textStyle="bold" />
</LinearLayout>
